src/odc/api/odc.h

/* Types forward declared, but not defined (only accessible through function API). */

struct odc_reader_t;
struct odc_frame_t;
typedef struct odc_reader_t odc_reader_t;
typedef struct odc_frame_t odc_frame_t;
int odc_initialise_api();
int odc_version(const char** version);
int odc_git_sha1(const char** sha1);
/* Constants and lookups */

enum OdcColumnType {
    ODC_IGNORE   = 0,
    ODC_INTEGER  = 1,
    ODC_REAL     = 2,
    ODC_STRING   = 3,
    ODC_BITFIELD = 4,
    ODC_DOUBLE   = 5
};
const char* odc_error_string(int err);
/* General value checks */

int odc_type_name(int type, const char** type_name);
int odc_set_missing_integer(long missing_integer);
int odc_set_missing_double(double missing_double);
int odc_type_count(int* count);
int odc_missing_integer(long* missing_value);
int odc_missing_double(double* missing_value);
int odc_open_path(odc_reader_t** reader, const char* filename);
int odc_close(const odc_reader_t* o);
int odc_free_frame(const odc_frame_t* frame);
int odc_frame_row_count(const odc_frame_t* frame, long* count);
int odc_frame_column_count(const odc_frame_t* frame, int* count);