src/odc/api/odc.f90


module odc

    use, intrinsic :: iso_c_binding
    implicit none

    integer(c_int), public, parameter :: ODC_IGNORE = 0
    integer(c_int), public, parameter :: ODC_INTEGER = 1
    integer(c_int), public, parameter :: ODC_REAL = 2
    integer(c_int), public, parameter :: ODC_STRING = 3
    integer(c_int), public, parameter :: ODC_BITFIELD = 4
    integer(c_int), public, parameter :: ODC_DOUBLE = 5

    integer(c_int), public, parameter :: ODC_THROW = 1
    integer(c_int), public, parameter :: ODC_ERRORS_CHECKED = 2
    integer(c_int), public, parameter :: ODC_ERRORS_REPORT = 3

    private

    integer, parameter :: dp = selected_real_kind(15, 307)

    type odc_reader
        type(c_ptr) :: impl = c_null_ptr
    contains
        procedure :: open_path => reader_open_path
        procedure :: close => reader_close

        ! next_frame will clean up the frame object when called on the same object.
        ! If not, must call frame%free()
        procedure :: next_frame => reader_next_frame
    end type

    type odc_frame
        type(c_ptr) :: impl = c_null_ptr
    contains
        procedure :: free => frame_free
        procedure :: row_count => frame_row_count
        procedure :: column_count => frame_column_count
        procedure :: column_name => frame_column_name
        procedure :: column_type => frame_column_type
        procedure :: column_data_size => frame_column_data_size
        procedure :: column_data_size_doubles => frame_column_data_size_doubles
        procedure :: column_bitfield_count => frame_column_bitfield_count
        procedure :: column_bits_name => frame_column_bits_name
        procedure :: column_bits_size => frame_column_bits_size
        procedure :: column_bits_offset => frame_column_bits_offset
        procedure :: decode => frame_decode
    end type

    type odc_encoder
        type(c_ptr) :: impl = c_null_ptr
        real, pointer, dimension(:,:) :: data_array => null()
        logical :: column_major = .true.
    contains
        procedure :: initialise => encoder_initialise
        procedure :: free => encoder_free
        procedure :: set_row_count => encoder_set_row_count
        procedure :: set_rows_per_frame => encoder_set_rows_per_frame
        procedure :: set_data_array => encoder_set_data_array
        procedure :: add_column => encoder_add_column
        procedure :: column_set_size_doubles => encoder_column_set_size_doubles
        procedure :: column_set_stride => encoder_column_set_stride
        procedure :: column_set_data => encoder_column_set_data
        procedure :: column_add_bitfield_field => encoder_column_add_bitfield_field
        procedure :: encode => encoder_encode
    end type

    type odc_decode_target
        type(c_ptr) :: impl = c_null_ptr
    contains
        procedure :: initialise => dt_initialise
        procedure :: free => dt_free
        procedure :: set_row_count => dt_set_row_count
        procedure :: set_data_array => dt_set_data_array
        procedure :: data => dt_data_array
        procedure :: row_count => dt_row_count
        procedure :: column_count => dt_column_count
        procedure :: column_data_size_doubles => dt_column_data_size_doubles
    end type

    ! Type declarations

    public :: odc_reader
    public :: odc_frame
    public :: odc_encoder
    public :: odc_decode_target

    ! Configuration management functions

    public :: odc_version, odc_git_sha1
    public :: odc_initialise_api
    public :: odc_type_name, odc_type_count
    public :: odc_error_handling, odc_reset_error
    public :: odc_success, odc_error_string
    public :: odc_missing_integer, odc_missing_double
    public :: odc_set_missing_integer, odc_set_missing_double

    ! For utility

    interface
        pure function strlen(str) result(len) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: str
            integer(c_int) :: len
        end function
    end interface

    ! Wrap the C api functions

    interface

        pure function c_odc_version() result(pstr) bind(c, name='odc_version')
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr) :: pstr
        end function

        pure function c_odc_git_sha1() result(pstr) bind(c, name='odc_git_sha1')
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr) :: pstr
        end function

        subroutine odc_initialise_api() bind(c)
        end subroutine

        pure function c_odc_type_name(type) result(pstr) bind(c, name='odc_type_name')
            use, intrinsic :: iso_c_binding
            implicit none
            integer(c_int), intent(in), value :: type
            type(c_ptr) :: pstr
        end function

        pure function odc_type_count() result(ntypes) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            integer(c_int) :: ntypes
        end function

        subroutine odc_error_handling(handling_type) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            integer(c_int), intent(in), value :: handling_type
        end subroutine

        function c_odc_error_string() result(error_string) bind(c, name='odc_error_string')
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr) :: error_string
        end function

        subroutine odc_reset_error() bind(c)
        end subroutine

        pure function odc_missing_integer() result(missing_integer) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            integer(c_long) :: missing_integer
        end function

        pure function odc_missing_double() result(missing_double) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            real(c_double) :: missing_double
        end function

        subroutine odc_set_missing_integer(missing_integer) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            integer(c_long), intent(in), value :: missing_integer
        end subroutine

        subroutine odc_set_missing_double(missing_double) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            real(c_double), intent(in), value :: missing_double
        end subroutine

        function odc_success() result(successp) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            logical(c_bool) :: successp
        end function

        ! READ object api

        function odc_open_path(path) result(reader) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: path
            type(c_ptr) :: reader
        end function

        subroutine odc_close(o) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: o
        end subroutine

        function odc_alloc_next_frame(o) result(frame) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: o
            type(c_ptr) :: frame
        end function

        function odc_alloc_next_frame_aggregated(o, maximum_rows) result(frame) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: o
            integer(c_long), intent(in), value :: maximum_rows
            type(c_ptr) :: frame
        end function

        ! Frame functionality

        subroutine odc_free_frame(frame) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
        end subroutine

        function odc_frame_row_count(frame) result(nrows) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_long) :: nrows
        end function

        function odc_frame_column_count(frame) result(ncols) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_int) :: ncols
        end function

        function odc_frame_column_name(frame, col) result(column_name) bind(c)
            ! n.b. 0-indexed column (C API)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_int), intent(in), value :: col
            type(c_ptr) :: column_name
        end function

        function odc_frame_column_type(frame, col) result(column_type) bind(c)
            ! n.b. 0-indexed column (C API)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_int), intent(in), value :: col
            integer(c_int) :: column_type
        end function

        function odc_frame_column_data_size(frame, col) result(element_size) bind(c)
            ! n.b. 0-indexed column (C API)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_int), intent(in), value :: col
            integer(c_int) :: element_size
        end function

        function odc_frame_column_bitfield_count(frame, col) result(field_count) bind(c)
            ! n.b. 0-indexed column (C API)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_int), intent(in), value :: col
            integer(c_int) :: field_count
        end function

        function odc_frame_column_bits_name(frame, col, field) result(bits_name) bind(c)
            ! n.b. 0-indexed column (C API)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_int), intent(in), value :: col, field
            type(c_ptr) :: bits_name
        end function

        function odc_frame_column_bits_size(frame, col, field) result(bits_size) bind(c)
            ! n.b. 0-indexed column (C API)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_int), intent(in), value :: col, field
            integer(c_int) :: bits_size
        end function

        function odc_frame_column_bits_offset(frame, col, field) result(bits_offset) bind(c)
            ! n.b. 0-indexed column (C API)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame
            integer(c_int), intent(in), value :: col, field
            integer(c_int) :: bits_offset
        end function

        subroutine odc_frame_build_all_decode_target(frame, target) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame, target
        end subroutine

        function odc_frame_decode(frame, decode_target, nthreads) result(row_count) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: frame, decode_target
            integer(c_int), intent(in), value :: nthreads
            integer(c_long) :: row_count
        end function

        ! Work with decode targets

        function odc_alloc_decode_target() result(decode_target) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr) :: decode_target
        end function

        subroutine odc_free_decode_target(decode_target) bind(c)
            use, intrinsic :: iso_c_binding
            implicit none
            type(c_ptr), intent(in), value :: decode_target
        end subroutine
